--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ yarn-error.log
 
 # IDEs and editors
 .idea/
-.project
+.proje
 .classpath
 .c9/
 *.launch
@@ -41,3 +41,4 @@ testem.log
 .DS_Store
 Thumbs.db
 .env
+
